add property hermes.jms-receive-task-enabled=false - for disable external JMS receivers